# onebox

./: .gitignore  CHANGELOG.MD  CHANGELOG.TEMPLATE.MD  CONTRIBUTING.md  GITHUB_SYNC_GUIDE.md  LICENSE  README.md  README_CN.md  package-lock.json  package.json  vite.config.ts  代码质量检查报告.md
.github/workflows/: beta-release.yml  dev-release.yml  manual-release.yml  stable-release.yml
.husky/: pre-push
lang/: en.json  zh.json
scripts/: download-binaries.ts  generate-key-in-workflow.md  generate-secrets-guide.md  generate-signing-key.sh  merge-local-to-dev.sh
src/: App.css  App.tsx  main.tsx  tray.tsx  window-manger.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_status.rs  core.rs  database.rs  lan.rs  lib.rs  main.rs  plugins.rs  privilege.rs
src-tauri/src/vpn/: helper.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/action/: db.ts
src/components/auth/: forgot-password.tsx  login.tsx  register.tsx  user-info.tsx
src/components/config-template/: config-template.tsx
src/components/config-viewer/: config-viewer.tsx
src/components/configuration/: avatar.tsx  item.tsx  modal.tsx
src/components/developer/: bypass-router.tsx  common.tsx  dev-toggle.tsx  dhcp-toggle.tsx  dns-settings.tsx  local-config-toggle.tsx  select-stage.tsx  tun-stack.tsx  ua-settings.tsx
src/components/home/: body.tsx  hooks.ts  network-check.tsx  node-option.tsx  select-config.tsx  select-node.tsx  type.ts
src/components/log/: empty-log-message.tsx  log-filter.tsx  log-table.tsx  log-tabs.tsx  types.ts
src/components/router-settings/: help-modal.tsx  tab-content.tsx
src/components/settings/: about.tsx  auth-dialog.tsx  lan.tsx  (+8 more)
src/config/: common.ts  helper.ts
src/hooks/: useDB.ts  useSwr.ts  useVersion.ts
src/page/: config.tsx  developer.tsx  home.css  home.tsx  log.tsx  router.tsx  settings.tsx  variants.ts
src/single/: context.ts  db.ts  store.ts
src/types/: copyright.ts  definition.ts
src/utils/: auth-api.ts  auth-store.ts  clash-api.ts  helper.ts  update.ts
(+3 files in other folders)
