[package]
name = "one-box"
version = "1.0.0"
description = "OneBox is a cross-platform GUI client based on the sing-box kernel."
authors = ["OneOh Cloud LLC"]
edition = "2021"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oneoh_sing_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
log = "0.4"
tauri = { version = "2", features = [ "tray-icon", "devtools", "image-png"] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0"
tauri-plugin-log = "2"
lazy_static = "1.5.0"

sysproxy = { git = "https://github.com/OneOhCloud/sysproxy-rs" }
tauri-plugin-clipboard-manager = "2"

winapi = { version = "0.3", features = ["winbase"] }
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
webbrowser = "1.0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.9.1"
png = "0.17.16"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"


[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
